Updated the env template

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,9 @@ DATABASE_URL=postgresql+asyncpg://user:password@localhost:5432/mydb
 # PGADMIN_EMAIL=admin@admin.com
 # PGADMIN_PASSWORD=admin
 # PGADMIN_PORT=5050
+
+
+GOOGLE_CLIENT_ID=XXXX
+GOOGLE_CLIENT_SECRET=XXXX
+FRONTEND_BASE_URL=http://localhost:3000
+BACKEND_URL=http://localhost:8000
