chore: Update configuration and application entry point

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ POSTGRES_USER=user
 POSTGRES_PASSWORD=password
 POSTGRES_DB=mydb
 POSTGRES_PORT=5432
+PORT=8001
+UVICORN_PORT=8001
 
 # Database URL for FastAPI application
 # Format: postgresql+asyncpg://user:password@host:port/database
@@ -16,5 +18,5 @@ DATABASE_URL=postgresql+asyncpg://user:password@localhost:5432/mydb
 
 GOOGLE_CLIENT_ID=XXXX
 GOOGLE_CLIENT_SECRET=XXXX
-FRONTEND_BASE_URL=http://localhost:3000
-BACKEND_URL=http://localhost:8000
+FRONTEND_BASE_URL=http://localhost:3001
+BACKEND_URL=http://localhost:8001
